// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html a, ul, li renders 1`] = `
<Markup
  content="<ul>
    <li><a href="https://example.com">Website</a></li>
    <li><a href="mailto:m.bluth@example.com">Email</a></li>
    <li><a href="tel:+123456789">Phone</a></li>
  </ul>"
>
  <Element tagName="ul">
    <ul>
      
  
      <Element tagName="li">
        <li>
          <Element attributes={{ href: "https://example.com" }} tagName="a">
            <a href="https://example.com">
              Website
            </a>
          </Element>
        </li>
      </Element>
      
  
      <Element tagName="li">
        <li>
          <Element attributes={{ href: "mailto:m.bluth@example.com" }} tagName="a">
            <a href="mailto:m.bluth@example.com">
              Email
            </a>
          </Element>
        </li>
      </Element>
      
  
      <Element tagName="li">
        <li>
          <Element attributes={{ href: "tel:+123456789" }} tagName="a">
            <a href="tel:+123456789">
              Phone
            </a>
          </Element>
        </li>
      </Element>
      

    </ul>
  </Element>
</Markup>
`;

exports[`html abbr renders 1`] = `
<Markup content="You can use <abbr title="Cascading Style Sheets">CSS</abbr> to style your <abbr title="HyperText Markup Language">HTML</abbr>.">
  You can use 
  <Element attributes={{ title: "Cascading Style Sheets" }} tagName="abbr">
    <abbr title="Cascading Style Sheets">
      CSS
    </abbr>
  </Element>
   to style your 
  <Element attributes={{ title: "HyperText Markup Language" }} tagName="abbr">
    <abbr title="HyperText Markup Language">
      HTML
    </abbr>
  </Element>
  .
</Markup>
`;

exports[`html address renders 1`] = `
<Markup
  content="<address>
    <a href="mailto:jim@rock.com">jim@rock.com</a><br/>
    <a href="tel:+311-555-2368">+311-555-2368</a><br/>
  </address>"
>
  <Element tagName="address">
    <address>
      
  
      <Element attributes={{ href: "mailto:jim@rock.com" }} tagName="a">
        <a href="mailto:jim@rock.com">
          jim@rock.com
        </a>
      </Element>
      <Element selfClose tagName="br">
        <br />
      </Element>
      
  
      <Element attributes={{ href: "tel:+311-555-2368" }} tagName="a">
        <a href="tel:+311-555-2368">
          +311-555-2368
        </a>
      </Element>
      <Element selfClose tagName="br">
        <br />
      </Element>
      

    </address>
  </Element>
</Markup>
`;

exports[`html article renders 1`] = `
<Markup
  content="<article class="forecast">
    <h1>Weather forecast for Seattle</h1>
    <article class="day-forecast">
      <h2>03 March 2018</h2>
      <p>Rain.</p>
    </article>
    <article class="day-forecast">
      <h2>04 March 2018</h2>
      <p>Periods of rain.</p>
    </article>
    <article class="day-forecast">
      <h2>05 March 2018</h2>
      <p>Heavy rain.</p>
    </article>
  </article>"
>
  <Element attributes={{ className: "forecast" }} tagName="article">
    <article className="forecast">
      
  
      <Element tagName="h1">
        <h1>Weather forecast for Seattle</h1>
      </Element>
      
  
      <Element attributes={{ className: "day-forecast" }} tagName="article">
        <article className="day-forecast">
          
    
          <Element tagName="h2">
            <h2>03 March 2018</h2>
          </Element>
          
    
          <Element tagName="p">
            <p>Rain.</p>
          </Element>
          
  
        </article>
      </Element>
      
  
      <Element attributes={{ className: "day-forecast" }} tagName="article">
        <article className="day-forecast">
          
    
          <Element tagName="h2">
            <h2>04 March 2018</h2>
          </Element>
          
    
          <Element tagName="p">
            <p>Periods of rain.</p>
          </Element>
          
  
        </article>
      </Element>
      
  
      <Element attributes={{ className: "day-forecast" }} tagName="article">
        <article className="day-forecast">
          
    
          <Element tagName="h2">
            <h2>05 March 2018</h2>
          </Element>
          
    
          <Element tagName="p">
            <p>Heavy rain.</p>
          </Element>
          
  
        </article>
      </Element>
      

    </article>
  </Element>
</Markup>
`;

exports[`html aside renders 1`] = `
<Markup
  content="<aside>
    <p>The Rough-skinned Newt defends itself with a deadly neurotoxin.</p>
  </aside>"
>
  <Element tagName="aside">
    <aside>
      
  
      <Element tagName="p">
        <p>The Rough-skinned Newt defends itself with a deadly neurotoxin.</p>
      </Element>
      

    </aside>
  </Element>
</Markup>
`;

exports[`html audio renders 1`] = `
<Markup
  content="<audio controls src="/media/examples/t-rex-roar.mp3">
    Your browser does not support the <code>audio</code> element.
  </audio>"
>
  <Element attributes={{ controls: true, src: "/media/examples/t-rex-roar.mp3" }} tagName="audio">
    <audio controls src="/media/examples/t-rex-roar.mp3">
      
  Your browser does not support the 
      audio
       element.

    </audio>
  </Element>
</Markup>
`;

exports[`html audio renders with source 1`] = `
<Markup
  content="<audio controls="controls">
    <source src="foo.wav" type="audio/wav">
    Your browser does not support the <code>audio</code> element.
  </audio>"
>
  <Element attributes={{ controls: true }} tagName="audio">
    <audio controls>
      
  
      <Element selfClose attributes={{ src: "foo.wav", type: "audio/wav" }} tagName="source">
        <source src="foo.wav" type="audio/wav" />
      </Element>
      
  Your browser does not support the 
      audio
       element.

    </audio>
  </Element>
</Markup>
`;

exports[`html b renders 1`] = `
<Markup
  content="<p>The two most popular science courses offered by the school are <b class="term">chemistry</b> (the study of chemicals and the composition of substances) and <b class="term">physics</b> (the study of the nature and properties of matter and energy).</p>"
>
  <Element tagName="p">
    <p>
      The two most popular science courses offered by the school are 
      <Element attributes={{ className: "term" }} tagName="b">
        <b className="term">
          chemistry
        </b>
      </Element>
       (the study of chemicals and the composition of substances) and 
      <Element attributes={{ className: "term" }} tagName="b">
        <b className="term">
          physics
        </b>
      </Element>
       (the study of the nature and properties of matter and energy).
    </p>
  </Element>
</Markup>
`;

exports[`html bdi renders 1`] = `
<Markup
  content="<ul>
    <li><bdi class="name">Evil Steven</bdi>: 1st place</li>
    <li><bdi class="name">François fatale</bdi>: 2nd place</li>
    <li><span class="name">تیز سمی</span>: 3rd place</li>
    <li><bdi class="name">الرجل القوي إيان</bdi>: 4th place</li>
    <li><span class="name" dir="auto">تیز سمی</span>: 5th place</li>
  </ul>"
>
  <Element tagName="ul">
    <ul>
      
  
      <Element tagName="li">
        <li>
          <Element attributes={{ className: "name" }} tagName="bdi">
            <bdi className="name">
              Evil Steven
            </bdi>
          </Element>
          : 1st place
        </li>
      </Element>
      
  
      <Element tagName="li">
        <li>
          <Element attributes={{ className: "name" }} tagName="bdi">
            <bdi className="name">
              François fatale
            </bdi>
          </Element>
          : 2nd place
        </li>
      </Element>
      
  
      <Element tagName="li">
        <li>
          <Element attributes={{ className: "name" }} tagName="span">
            <span className="name">
              تیز سمی
            </span>
          </Element>
          : 3rd place
        </li>
      </Element>
      
  
      <Element tagName="li">
        <li>
          <Element attributes={{ className: "name" }} tagName="bdi">
            <bdi className="name">
              الرجل القوي إيان
            </bdi>
          </Element>
          : 4th place
        </li>
      </Element>
      
  
      <Element tagName="li">
        <li>
          <Element attributes={{ className: "name", dir: "auto" }} tagName="span">
            <span className="name" dir="auto">
              تیز سمی
            </span>
          </Element>
          : 5th place
        </li>
      </Element>
      

    </ul>
  </Element>
</Markup>
`;

exports[`html bdo renders 1`] = `
<Markup content="In the computer's memory, this is stored as <bdo dir="ltr">אה, אני אוהב להיות ליד חוף הים</bdo>">
  In the computer's memory, this is stored as 
  <Element attributes={{ dir: "ltr" }} tagName="bdo">
    <bdo dir="ltr">
      אה, אני אוהב להיות ליד חוף הים
    </bdo>
  </Element>
</Markup>
`;

exports[`html blockquote renders 1`] = `
<Markup
  content="<blockquote cite="https://www.huxley.net/bnw/four.html">
    <p>Words can be like X-rays, if you use them properly – they'll go through anything. You read and you're pierced.</p>
  </blockquote>
  
  <cite>– Aldous Huxley, Brave New World</cite>"
>
  <Element attributes={{ cite: "https://www.huxley.net/bnw/four.html" }} tagName="blockquote">
    <blockquote cite="https://www.huxley.net/bnw/four.html">
      
  
      <Element tagName="p">
        <p>Words can be like X-rays, if you use them properly – they'll go through anything. You read and you're pierced.</p>
      </Element>
      

    </blockquote>
  </Element>
  


  <Element tagName="cite">
    <cite>– Aldous Huxley, Brave New World</cite>
  </Element>
</Markup>
`;

exports[`html button renders 1`] = `
<Markup content="<button name="button">Click me</button>">
  <Element tagName="button">
    <button>Click me</button>
  </Element>
</Markup>
`;

exports[`html canvas renders 1`] = `
<Markup
  allow={[ "canvas" ]}
  content="<canvas id="canvas" width="300" height="300">
    An alternative text describing what your canvas displays.
  </canvas>"
>
  <Element attributes={{ id: "canvas", width: "300", height: "300" }} tagName="canvas">
    <canvas height="300" id="canvas" width="300">
      
  An alternative text describing what your canvas displays.

    </canvas>
  </Element>
</Markup>
`;

exports[`html canvas renders nothing when not allowed 1`] = `
<Markup
  content="<canvas id="canvas" width="300" height="300">
    An alternative text describing what your canvas displays.
  </canvas>"
>
  
  An alternative text describing what your canvas displays.

</Markup>
`;

exports[`html caption renders 1`] = `
<Markup
  content="<table>
    <caption>He-Man and Skeletor facts</caption>
    <tr>
      <td> </td>
      <th scope="col" class="heman">He-Man</th>
      <th scope="col" class="skeletor">Skeletor</th>
    </tr>
  </table>"
>
  <Element tagName="table">
    <table>
      
  
      <Element tagName="caption">
        <caption>He-Man and Skeletor facts</caption>
      </Element>
      
  
      <Element tagName="tbody">
        <tbody>
          <Element tagName="tr">
            <tr>
              
    
              <Element tagName="td">
                <td> </td>
              </Element>
              
    
              <Element attributes={{ scope: "col", className: "heman" }} tagName="th">
                <th className="heman" scope="col">
                  He-Man
                </th>
              </Element>
              
    
              <Element attributes={{ scope: "col", className: "skeletor" }} tagName="th">
                <th className="skeletor" scope="col">
                  Skeletor
                </th>
              </Element>
              
  
            </tr>
          </Element>
          

        </tbody>
      </Element>
    </table>
  </Element>
</Markup>
`;

exports[`html cite renders 1`] = `
<Markup
  content="<blockquote>
    <p>It was a bright cold day in April, and the clocks were striking thirteen.</p>
    <footer>
      First sentence in <cite><a href="http://www.george-orwell.org/1984/0.html"><i>Nineteen Eighty-Four</i></a></cite> by George Orwell (Part 1, Chapter 1).
    </footer>
  </blockquote>"
>
  <Element tagName="blockquote">
    <blockquote>
      
  
      <Element tagName="p">
        <p>It was a bright cold day in April, and the clocks were striking thirteen.</p>
      </Element>
      
  
      <Element tagName="footer">
        <footer>
          
    First sentence in 
          <Element tagName="cite">
            <cite>
              <Element attributes={{ href: "http://www.george-orwell.org/1984/0.html" }} tagName="a">
                <a href="http://www.george-orwell.org/1984/0.html">
                  <Element tagName="i">
                    <i>Nineteen Eighty-Four</i>
                  </Element>
                </a>
              </Element>
            </cite>
          </Element>
           by George Orwell (Part 1, Chapter 1).
  
        </footer>
      </Element>
      

    </blockquote>
  </Element>
</Markup>
`;

exports[`html code renders 1`] = `
<Markup content="<p>The <code>push()</code> method adds one or more elements to the end of an array and returns the new length of the array.</p>">
  <Element tagName="p">
    <p>
      The 
      <Element tagName="code">
        <code>push()</code>
      </Element>
       method adds one or more elements to the end of an array and returns the new length of the array.
    </p>
  </Element>
</Markup>
`;

exports[`html col, colgroup renders 1`] = `
<Markup
  content="<table>
    <caption>Superheros and sidekicks</caption>
    <colgroup>
      <col>
      <col span="2" class="batman">
      <col span="2" class="flash">
    </colgroup>
  </table>"
>
  <Element tagName="table">
    <table>
      
  
      <Element tagName="caption">
        <caption>Superheros and sidekicks</caption>
      </Element>
      
  
      <Element tagName="colgroup">
        <colgroup>
          
    
          <Element selfClose tagName="col">
            <col />
          </Element>
          
    
          <Element selfClose attributes={{ span: 2, className: "batman" }} tagName="col">
            <col className="batman" span={2} />
          </Element>
          
    
          <Element selfClose attributes={{ span: 2, className: "flash" }} tagName="col">
            <col className="flash" span={2} />
          </Element>
          
  
        </colgroup>
      </Element>
      

    </table>
  </Element>
</Markup>
`;

exports[`html details, summary doesnt render summary when not in details 1`] = `
<Markup content="<summary>Details</summary>">
  Details
</Markup>
`;

exports[`html details, summary renders 1`] = `
<Markup
  content="<details>
    <summary>Details</summary>
    Something small enough to escape casual notice.
  </details>"
>
  <Element tagName="details">
    <details>
      
  
      <Element tagName="summary">
        <summary>Details</summary>
      </Element>
      
  Something small enough to escape casual notice.

    </details>
  </Element>
</Markup>
`;

exports[`html dfn renders 1`] = `
<Markup content="<p>A <dfn id="def-validator">validator</dfn> is a program that checks for syntax errors in code or documents.</p>">
  <Element tagName="p">
    <p>
      A 
      <Element attributes={{ id: "def-validator" }} tagName="dfn">
        <dfn id="def-validator">
          validator
        </dfn>
      </Element>
       is a program that checks for syntax errors in code or documents.
    </p>
  </Element>
</Markup>
`;

exports[`html div renders 1`] = `
<Markup
  content="<div class="warning">
    <img src="/media/examples/leopard.jpg" alt="An intimidating leopard.">
    <p>Beware of the leopard</p>
  </div>"
>
  <Element attributes={{ className: "warning" }} tagName="div">
    <div className="warning">
      
  
      <Element selfClose attributes={{ src: "/media/examples/leopard.jpg", alt: "An intimidating leopard." }} tagName="img">
        <img alt="An intimidating leopard." src="/media/examples/leopard.jpg" />
      </Element>
      
  
      <Element tagName="p">
        <p>Beware of the leopard</p>
      </Element>
      

    </div>
  </Element>
</Markup>
`;

exports[`html dl, dt, dd renders 1`] = `
<Markup
  content="<dl>
    <dt>Beast of Bodmin</dt>
    <dd>A large feline inhabiting Bodmin Moor.</dd>
  
    <dt>Morgawr</dt>
    <dd>A sea serpent.</dd>
  
    <dt>Owlman</dt>
    <dd>A giant owl-like creature.</dd>
  </dl>"
>
  <Element tagName="dl">
    <dl>
      
  
      <Element tagName="dt">
        <dt>Beast of Bodmin</dt>
      </Element>
      
  
      <Element tagName="dd">
        <dd>A large feline inhabiting Bodmin Moor.</dd>
      </Element>
      

  
      <Element tagName="dt">
        <dt>Morgawr</dt>
      </Element>
      
  
      <Element tagName="dd">
        <dd>A sea serpent.</dd>
      </Element>
      

  
      <Element tagName="dt">
        <dt>Owlman</dt>
      </Element>
      
  
      <Element tagName="dd">
        <dd>A giant owl-like creature.</dd>
      </Element>
      

    </dl>
  </Element>
</Markup>
`;

exports[`html em renders 1`] = `
<Markup content="We <em>had</em> to do something about it.">
  We 
  <Element tagName="em">
    <em>had</em>
  </Element>
   to do something about it.
</Markup>
`;

exports[`html figure, figcaption renders 1`] = `
<Markup
  content="<figure>
    <img src="/media/examples/elephant-660-480.jpg" alt="Elephant at sunset" />
    <figcaption>An elephant at sunset</figcaption>
  </figure>"
>
  <Element tagName="figure">
    <figure>
      
  
      <Element selfClose attributes={{ src: "/media/examples/elephant-660-480.jpg", alt: "Elephant at sunset" }} tagName="img">
        <img alt="Elephant at sunset" src="/media/examples/elephant-660-480.jpg" />
      </Element>
      
  
      <Element tagName="figcaption">
        <figcaption>An elephant at sunset</figcaption>
      </Element>
      

    </figure>
  </Element>
</Markup>
`;

exports[`html footer renders 1`] = `
<Markup
  content="<article>
    <h1>How to be a wizard</h1>
    <ol>
      <li>Grow a long, majestic beard.</li>
      <li>Wear a tall pointed hat.</li>
      <li>Have I mentioned the beard?</li>
    </ol>
    <footer>
      <p>© 2018 Gandalf</p>
    </footer>
  </article>"
>
  <Element tagName="article">
    <article>
      
  
      <Element tagName="h1">
        <h1>How to be a wizard</h1>
      </Element>
      
  
      <Element tagName="ol">
        <ol>
          
    
          <Element tagName="li">
            <li>Grow a long, majestic beard.</li>
          </Element>
          
    
          <Element tagName="li">
            <li>Wear a tall pointed hat.</li>
          </Element>
          
    
          <Element tagName="li">
            <li>Have I mentioned the beard?</li>
          </Element>
          
  
        </ol>
      </Element>
      
  
      <Element tagName="footer">
        <footer>
          
    
          <Element tagName="p">
            <p>© 2018 Gandalf</p>
          </Element>
          
  
        </footer>
      </Element>
      

    </article>
  </Element>
</Markup>
`;

exports[`html h1 - h6 renders 1`] = `
<Markup
  content="<h1>Beetles</h1>
        <h2>External morphology</h2>
            <h3>Head</h3>
                <h4>Mouthparts</h4>
            <h3>Thorax</h3>
                <h5>Prothorax</h5>
                <h6>Pterothorax</h6>"
>
  <Element tagName="h1">
    <h1>Beetles</h1>
  </Element>
  <Element selfClose tagName="br">
    <br />
  </Element>
        
  <Element tagName="h2">
    <h2>External morphology</h2>
  </Element>
  <Element selfClose tagName="br">
    <br />
  </Element>
            
  <Element tagName="h3">
    <h3>Head</h3>
  </Element>
  <Element selfClose tagName="br">
    <br />
  </Element>
                
  <Element tagName="h4">
    <h4>Mouthparts</h4>
  </Element>
  <Element selfClose tagName="br">
    <br />
  </Element>
            
  <Element tagName="h3">
    <h3>Thorax</h3>
  </Element>
  <Element selfClose tagName="br">
    <br />
  </Element>
                
  <Element tagName="h5">
    <h5>Prothorax</h5>
  </Element>
  <Element selfClose tagName="br">
    <br />
  </Element>
                
  <Element tagName="h6">
    <h6>Pterothorax</h6>
  </Element>
</Markup>
`;

exports[`html header renders 1`] = `
<Markup
  content="<header class="page-header">
    <h1>Cute Puppies Express!</h1>
  </header>"
>
  <Element attributes={{ className: "page-header" }} tagName="header">
    <header className="page-header">
      
  
      <Element tagName="h1">
        <h1>Cute Puppies Express!</h1>
      </Element>
      

    </header>
  </Element>
</Markup>
`;

exports[`html hr renders 1`] = `
<Markup
  content="<p>§1: The first rule of Fight Club is: You do not talk about Fight Club.</p>
  <hr>
  <p>§2: The second rule of Fight Club is: Always bring cupcakes.</p>"
>
  <Element tagName="p">
    <p>§1: The first rule of Fight Club is: You do not talk about Fight Club.</p>
  </Element>
  

  <Element selfClose tagName="hr">
    <hr />
  </Element>
  

  <Element tagName="p">
    <p>§2: The second rule of Fight Club is: Always bring cupcakes.</p>
  </Element>
</Markup>
`;

exports[`html i renders 1`] = `
<Markup content="<p><i class="latin">Musa</i> is one of two or three genera in the family <i class="latin">Musaceae</i>; it includes bananas and plantains.</p>">
  <Element tagName="p">
    <p>
      <Element attributes={{ className: "latin" }} tagName="i">
        <i className="latin">
          Musa
        </i>
      </Element>
       is one of two or three genera in the family 
      <Element attributes={{ className: "latin" }} tagName="i">
        <i className="latin">
          Musaceae
        </i>
      </Element>
      ; it includes bananas and plantains.
    </p>
  </Element>
</Markup>
`;

exports[`html iframe renders 1`] = `
<Markup allow={[ "iframe" ]} content="<iframe width="400" height="300" src="https://maps.google.com"></iframe>">
  <Element attributes={{ width: "400", height: "300", src: "https://maps.google.com" }} tagName="iframe">
    <iframe height="300" src="https://maps.google.com" width="400" />
  </Element>
</Markup>
`;

exports[`html iframe renders nothing when not allowed 1`] = `<Markup content="<iframe width="400" height="300" src="https://maps.google.com"></iframe>" />`;

exports[`html img renders 1`] = `
<Markup content="<img class="fit-picture" src="/media/examples/grapefruit-slice-332-332.jpg" alt="Grapefruit slice atop a pile of other slices" />">
  <Element selfClose attributes={{ className: "fit-picture", src: "/media/examples/grapefruit-slice-332-332.jpg", alt: "Grapefruit slice atop a pile of other slices" }} tagName="img">
    <img alt="Grapefruit slice atop a pile of other slices" className="fit-picture" src="/media/examples/grapefruit-slice-332-332.jpg" />
  </Element>
</Markup>
`;

exports[`html ins renders 1`] = `
<Markup
  content="<ins cite="../howtobeawizard.html" datetime="2018-05">
    <p>“A wizard is never late …”</p>
  </ins>"
>
  <Element attributes={{ cite: "../howtobeawizard.html", dateTime: "2018-05" }} tagName="ins">
    <ins cite="../howtobeawizard.html" dateTime="2018-05">
      
  
      “A wizard is never late …”
      

    </ins>
  </Element>
</Markup>
`;

exports[`html kbd renders 1`] = `
<Markup content="Please press <kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>R</kbd> to re-render an MDN page.">
  Please press 
  <Element tagName="kbd">
    <kbd>Ctrl</kbd>
  </Element>
   + 
  <Element tagName="kbd">
    <kbd>Shift</kbd>
  </Element>
   + 
  <Element tagName="kbd">
    <kbd>R</kbd>
  </Element>
   to re-render an MDN page.
</Markup>
`;

exports[`html main renders 1`] = `
<Markup
  content="<main role="main">
    <p>Geckos are a group of usually small, usually nocturnal lizards. They are found on every continent except Australia.</p>
  </main>"
>
  <Element attributes={{ role: "main" }} tagName="main">
    <main role="main">
      
  
      <Element tagName="p">
        <p>Geckos are a group of usually small, usually nocturnal lizards. They are found on every continent except Australia.</p>
      </Element>
      

    </main>
  </Element>
</Markup>
`;

exports[`html mark renders 1`] = `
<Markup content="Most <mark>salamander</mark>s are nocturnal, and hunt for insects, worms, and other small creatures.">
  Most 
  <Element tagName="mark">
    <mark>salamander</mark>
  </Element>
  s are nocturnal, and hunt for insects, worms, and other small creatures.
</Markup>
`;

exports[`html nav, ol, li renders 1`] = `
<Markup
  content="<nav class="crumbs">
    <ol>
      <li class="crumb"><a href="bikes">Bikes</a></li>
      <li class="crumb"><a href="bikes/bmx">BMX</a></li>
      <li class="crumb">Jump Bike 3000</li>
    </ol>
  </nav>"
>
  <Element attributes={{ className: "crumbs" }} tagName="nav">
    <nav className="crumbs">
      
  
      <Element tagName="ol">
        <ol>
          
    
          <Element attributes={{ className: "crumb" }} tagName="li">
            <li className="crumb">
              <Element attributes={{ href: "bikes" }} tagName="a">
                <a href="bikes">
                  Bikes
                </a>
              </Element>
            </li>
          </Element>
          
    
          <Element attributes={{ className: "crumb" }} tagName="li">
            <li className="crumb">
              <Element attributes={{ href: "bikes/bmx" }} tagName="a">
                <a href="bikes/bmx">
                  BMX
                </a>
              </Element>
            </li>
          </Element>
          
    
          <Element attributes={{ className: "crumb" }} tagName="li">
            <li className="crumb">
              Jump Bike 3000
            </li>
          </Element>
          
  
        </ol>
      </Element>
      

    </nav>
  </Element>
</Markup>
`;

exports[`html picture renders 1`] = `
<Markup
  content="<picture>
    <source srcset="/media/examples/surfer-240-200.jpg" media="(min-width: 800px)">
    <img src="/media/examples/painted-hand-298-332.jpg" />
  </picture>"
>
  <Element tagName="picture">
    <picture>
      
  
      <Element selfClose attributes={{ srcSet: "/media/examples/surfer-240-200.jpg", media: "(min-width: 800px)" }} tagName="source">
        <source media="(min-width: 800px)" srcSet="/media/examples/surfer-240-200.jpg" />
      </Element>
      
  
      <Element selfClose attributes={{ src: "/media/examples/painted-hand-298-332.jpg" }} tagName="img">
        <img src="/media/examples/painted-hand-298-332.jpg" />
      </Element>
      

    </picture>
  </Element>
</Markup>
`;

exports[`html pre renders 1`] = `
<Markup
  content="<pre>
    L          TE
      A       A
        C    V
          R A
          DOU
          LOU
        REUSE
        QUE TU
        PORTES
      ET QUI T'
      ORNE O CI
        VILISÉ
      OTE-  TU VEUX
        LA    BIEN
      SI      RESPI
              RER       - Apollinaire
  </pre>"
>
  <Element tagName="pre">
    <pre>  L          TE
    A       A
      C    V
        R A
        DOU
        LOU
      REUSE
      QUE TU
      PORTES
    ET QUI T'
    ORNE O CI
      VILISÉ
    OTE-  TU VEUX
      LA    BIEN
    SI      RESPI
            RER       - Apollinaire
</pre>
  </Element>
</Markup>
`;

exports[`html q renders 1`] = `
<Markup content="When Dave asks HAL to open the pod bay door, HAL answers: <q cite="https://www.imdb.com/title/tt0062622/quotes/qt0396921">I'm sorry, Dave. I'm afraid I can't do that.</q>">
  When Dave asks HAL to open the pod bay door, HAL answers: 
  <Element attributes={{ cite: "https://www.imdb.com/title/tt0062622/quotes/qt0396921" }} tagName="q">
    <q cite="https://www.imdb.com/title/tt0062622/quotes/qt0396921">
      I'm sorry, Dave. I'm afraid I can't do that.
    </q>
  </Element>
</Markup>
`;

exports[`html ruby, rp, rt, rtc renders 1`] = `
<Markup
  content="<ruby xml:lang="zh-Hant" style="ruby-position: under;">
    <rbc>
      <rb>馬</rb><rp>(</rp><rt>mǎ</rt><rp>)</rp>
      <rb>來</rb><rp>(</rp><rt>lái</rt><rp>)</rp>
      <rb>西</rb><rp>(</rp><rt>xī</rt><rp>)</rp>
      <rb>亞</rb><rp>(</rp><rt>yà</rt><rp>)</rp>
    </rbc>
    <rtc xml:lang="en" style="ruby-position: over;">
      <rp>(</rp><rt>Malaysia</rt><rp>)</rp>
    </rtc>
  </ruby>"
>
  <Element attributes={{ xml:lang: "zh-Hant", style: { rubyPosition: "under" } }} tagName="ruby">
    <ruby style={{ rubyPosition: "under" }} xml:lang="zh-Hant">
      
  
      
    
      馬
      (
      mǎ
      )
      
    
      來
      (
      lái
      )
      
    
      西
      (
      xī
      )
      
    
      亞
      (
      yà
      )
      
  
      
  
      <Element attributes={{ xml:lang: "en", style: { rubyPosition: "over" } }} tagName="rtc">
        <rtc style={{ rubyPosition: "over" }} xml:lang="en">
          
    
          <Element tagName="rp">
            <rp>(</rp>
          </Element>
          <Element tagName="rt">
            <rt>Malaysia</rt>
          </Element>
          <Element tagName="rp">
            <rp>)</rp>
          </Element>
          
  
        </rtc>
      </Element>
      

    </ruby>
  </Element>
</Markup>
`;

exports[`html s renders 1`] = `
<Markup content="<s>There will be a few tickets available at the box office tonight.</s>">
  <Element tagName="s">
    <s>There will be a few tickets available at the box office tonight.</s>
  </Element>
</Markup>
`;

exports[`html samp renders 1`] = `
<Markup content="<samp>Keyboard not found <br>Press F1 to continue</samp>">
  <Element tagName="samp">
    <samp>
      Keyboard not found 
      <Element selfClose tagName="br">
        <br />
      </Element>
      Press F1 to continue
    </samp>
  </Element>
</Markup>
`;

exports[`html section renders 1`] = `
<Markup
  content="<section>
    <h1>Introduction</h1>
    <p>People have been catching fish for food since before recorded history...</p>
  </section>"
>
  <Element tagName="section">
    <section>
      
  
      <Element tagName="h1">
        <h1>Introduction</h1>
      </Element>
      
  
      <Element tagName="p">
        <p>People have been catching fish for food since before recorded history...</p>
      </Element>
      

    </section>
  </Element>
</Markup>
`;

exports[`html small renders 1`] = `
<Markup content="<p><small>The content is licensed under a Creative Commons Attribution-ShareAlike 2.5 Generic License.</small></p>">
  <Element tagName="p">
    <p>
      <Element tagName="small">
        <small>The content is licensed under a Creative Commons Attribution-ShareAlike 2.5 Generic License.</small>
      </Element>
    </p>
  </Element>
</Markup>
`;

exports[`html source doesnt render if outside its parent 1`] = `<Markup content="<source src="/media/examples/flower.webm" type="video/webm">" />`;

exports[`html source renders 1`] = `
<Markup
  content="<video controls width="250" height="200" muted>
    <source src="/media/examples/flower.webm" type="video/webm">
    <source src="/media/examples/flower.mp4" type="video/mp4">
    This browser does not support the HTML5 video element.
  </video>"
>
  <Element attributes={{ controls: true, width: "250", height: "200", muted: true }} tagName="video">
    <video controls muted height="200" width="250">
      
  
      <Element selfClose attributes={{ src: "/media/examples/flower.webm", type: "video/webm" }} tagName="source">
        <source src="/media/examples/flower.webm" type="video/webm" />
      </Element>
      
  
      <Element selfClose attributes={{ src: "/media/examples/flower.mp4", type: "video/mp4" }} tagName="source">
        <source src="/media/examples/flower.mp4" type="video/mp4" />
      </Element>
      
  This browser does not support the HTML5 video element.

    </video>
  </Element>
</Markup>
`;

exports[`html span renders 1`] = `
<Markup content="Add the <span class="ingredient">basil</span>, <span class="ingredient">pine nuts</span> and <span class="ingredient">garlic</span> to a blender and blend into a paste.">
  Add the 
  <Element attributes={{ className: "ingredient" }} tagName="span">
    <span className="ingredient">
      basil
    </span>
  </Element>
  , 
  <Element attributes={{ className: "ingredient" }} tagName="span">
    <span className="ingredient">
      pine nuts
    </span>
  </Element>
   and 
  <Element attributes={{ className: "ingredient" }} tagName="span">
    <span className="ingredient">
      garlic
    </span>
  </Element>
   to a blender and blend into a paste.
</Markup>
`;

exports[`html strong renders 1`] = `
<Markup content="... the most important rule, the rule you can never forget, no matter how much he cries, no matter how much he begs: <strong>never feed him after midnight</strong>.">
  ... the most important rule, the rule you can never forget, no matter how much he cries, no matter how much he begs: 
  <Element tagName="strong">
    <strong>never feed him after midnight</strong>
  </Element>
  .
</Markup>
`;

exports[`html sub renders 1`] = `
<Markup
  content="Almost every developer's favorite molecule is
            C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub>, also known as "caffeine.""
>
  Almost every developer's favorite molecule is
          C
  <Element tagName="sub">
    <sub>8</sub>
  </Element>
  H
  <Element tagName="sub">
    <sub>10</sub>
  </Element>
  N
  <Element tagName="sub">
    <sub>4</sub>
  </Element>
  O
  <Element tagName="sub">
    <sub>2</sub>
  </Element>
  , also known as "caffeine."
</Markup>
`;

exports[`html sup renders 1`] = `
<Markup content="<var>a<sup>2</sup></var> + <var>b<sup>2</sup></var> = <var>c<sup>2</sup></var>">
  <Element tagName="var">
    <var>
      a
      <Element tagName="sup">
        <sup>2</sup>
      </Element>
    </var>
  </Element>
   + 
  <Element tagName="var">
    <var>
      b
      <Element tagName="sup">
        <sup>2</sup>
      </Element>
    </var>
  </Element>
   = 
  <Element tagName="var">
    <var>
      c
      <Element tagName="sup">
        <sup>2</sup>
      </Element>
    </var>
  </Element>
</Markup>
`;

exports[`html table, thead, tbody, tfoot renders 1`] = `
<Markup
  content="<table>
    <thead>
      <tr>
        <th>Items</th>
        <th scope="col">Expenditure</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th scope="row">Donuts</th>
        <td>3,000</td>
      </tr>
      <tr>
        <th scope="row">Stationary</th>
        <td>18,000</td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th scope="row">Totals</th>
        <td>21,000</td>
      </tr>
    </tfoot>
  </table>"
>
  <Element tagName="table">
    <table>
      
  
      <Element tagName="thead">
        <thead>
          
    
          <Element tagName="tr">
            <tr>
              
      
              <Element tagName="th">
                <th>Items</th>
              </Element>
              
      
              <Element attributes={{ scope: "col" }} tagName="th">
                <th scope="col">
                  Expenditure
                </th>
              </Element>
              
    
            </tr>
          </Element>
          
  
        </thead>
      </Element>
      
  
      <Element tagName="tbody">
        <tbody>
          
    
          <Element tagName="tr">
            <tr>
              
      
              <Element attributes={{ scope: "row" }} tagName="th">
                <th scope="row">
                  Donuts
                </th>
              </Element>
              
      
              <Element tagName="td">
                <td>3,000</td>
              </Element>
              
    
            </tr>
          </Element>
          
    
          <Element tagName="tr">
            <tr>
              
      
              <Element attributes={{ scope: "row" }} tagName="th">
                <th scope="row">
                  Stationary
                </th>
              </Element>
              
      
              <Element tagName="td">
                <td>18,000</td>
              </Element>
              
    
            </tr>
          </Element>
          
  
        </tbody>
      </Element>
      
  
      <Element tagName="tfoot">
        <tfoot>
          
    
          <Element tagName="tr">
            <tr>
              
      
              <Element attributes={{ scope: "row" }} tagName="th">
                <th scope="row">
                  Totals
                </th>
              </Element>
              
      
              <Element tagName="td">
                <td>21,000</td>
              </Element>
              
    
            </tr>
          </Element>
          
  
        </tfoot>
      </Element>
      

    </table>
  </Element>
</Markup>
`;

exports[`html table, thead, tbody, tfoot renders table with direct rows 1`] = `
<Markup
  content="<table>
    <tr>
      <th scope="row">Donuts</th>
      <td>3,000</td>
    </tr>
    <tr>
      <th scope="row">Stationary</th>
      <td>18,000</td>
    </tr>
  </table>"
>
  <Element tagName="table">
    <table>
      
  
      <Element tagName="tbody">
        <tbody>
          <Element tagName="tr">
            <tr>
              
    
              <Element attributes={{ scope: "row" }} tagName="th">
                <th scope="row">
                  Donuts
                </th>
              </Element>
              
    
              <Element tagName="td">
                <td>3,000</td>
              </Element>
              
  
            </tr>
          </Element>
          
  
          <Element tagName="tr">
            <tr>
              
    
              <Element attributes={{ scope: "row" }} tagName="th">
                <th scope="row">
                  Stationary
                </th>
              </Element>
              
    
              <Element tagName="td">
                <td>18,000</td>
              </Element>
              
  
            </tr>
          </Element>
          

        </tbody>
      </Element>
    </table>
  </Element>
</Markup>
`;

exports[`html tbody doesnt render outside of table 1`] = `
<Markup
  content="<tbody>
    <tr>
      <th scope="row">Donuts</th>
      <td>3,000</td>
    </tr>
  </tbody>"
>
  
  
    Donuts
    3,000
  

</Markup>
`;

exports[`html td doesnt render outside of tr 1`] = `
<Markup content="<td>3,000</td>">
  3,000
</Markup>
`;

exports[`html tfoot doesnt render outside of table 1`] = `
<Markup
  content="<tfoot>
    <tr>
      <th scope="row">Totals</th>
      <td>21,000</td>
    </tr>
  </tfoot>"
>
  
  
    Totals
    21,000
  

</Markup>
`;

exports[`html th doesnt render outside of tr 1`] = `
<Markup content="<th scope="row">Donuts</th>">
  Donuts
</Markup>
`;

exports[`html thead doesnt render outside of table 1`] = `
<Markup
  content="<thead>
    <tr>
      <th>Items</th>
      <th scope="col">Expenditure</th>
    </tr>
  </thead>"
>
  
  
    Items
    Expenditure
  

</Markup>
`;

exports[`html time renders 1`] = `
<Markup content="The Cure will be celebrating their 40th anniversary on <time datetime="2018-07-07">July 7</time> in London's Hyde Park.">
  The Cure will be celebrating their 40th anniversary on 
  <Element attributes={{ dateTime: "2018-07-07" }} tagName="time">
    <time dateTime="2018-07-07">
      July 7
    </time>
  </Element>
   in London's Hyde Park.
</Markup>
`;

exports[`html tr doesnt render outside of table 1`] = `
<Markup
  content="<tr>
    <th scope="row">Donuts</th>
    <td>3,000</td>
  </tr>"
>
  
  Donuts
  3,000

</Markup>
`;

exports[`html track doesnt render if outside its parent 1`] = `<Markup content="<track default kind="captions" srclang="en" src="/media/examples/friday.vtt"/>" />`;

exports[`html track renders 1`] = `
<Markup
  content="<video controls width="250" src="/media/examples/friday.mp4">
    <track default kind="captions" srclang="en" src="/media/examples/friday.vtt"/>
  
    Sorry, your browser doesn't support embedded videos.
  </video>"
>
  <Element attributes={{ controls: true, width: "250", src: "/media/examples/friday.mp4" }} tagName="video">
    <video controls src="/media/examples/friday.mp4" width="250">
      
  
      <Element selfClose attributes={{ default: true, kind: "captions", srcLang: "en", src: "/media/examples/friday.vtt" }} tagName="track">
        <track default kind="captions" src="/media/examples/friday.vtt" srcLang="en" />
      </Element>
      

  Sorry, your browser doesn't support embedded videos.

    </video>
  </Element>
</Markup>
`;

exports[`html u renders 1`] = `
<Markup content="<p>You could use this element to highlight <u>speling</u> mistakes, so the writer can <u>corect</u> them.</p>">
  <Element tagName="p">
    <p>
      You could use this element to highlight 
      <Element tagName="u">
        <u>speling</u>
      </Element>
       mistakes, so the writer can 
      <Element tagName="u">
        <u>corect</u>
      </Element>
       them.
    </p>
  </Element>
</Markup>
`;

exports[`html var renders 1`] = `
<Markup content="The volume of a box is <var>l</var> × <var>w</var> × <var>h</var>, where <var>l</var> represents the length, <var>w</var> the width and <var>h</var> the height of the box.">
  The volume of a box is 
  <Element tagName="var">
    <var>l</var>
  </Element>
   × 
  <Element tagName="var">
    <var>w</var>
  </Element>
   × 
  <Element tagName="var">
    <var>h</var>
  </Element>
  , where 
  <Element tagName="var">
    <var>l</var>
  </Element>
   represents the length, 
  <Element tagName="var">
    <var>w</var>
  </Element>
   the width and 
  <Element tagName="var">
    <var>h</var>
  </Element>
   the height of the box.
</Markup>
`;

exports[`html video renders 1`] = `
<Markup
  content="<video controls>
    <source src="myVideo.mp4" type="video/mp4">
    <source src="myVideo.webm" type="video/webm">
    <p>Your browser doesn't support HTML5 video. Here is a <a href="myVideo.mp4">link to the video</a> instead.</p>
  </video>"
>
  <Element attributes={{ controls: true }} tagName="video">
    <video controls>
      
  
      <Element selfClose attributes={{ src: "myVideo.mp4", type: "video/mp4" }} tagName="source">
        <source src="myVideo.mp4" type="video/mp4" />
      </Element>
      
  
      <Element selfClose attributes={{ src: "myVideo.webm", type: "video/webm" }} tagName="source">
        <source src="myVideo.webm" type="video/webm" />
      </Element>
      
  
      Your browser doesn't support HTML5 video. Here is a 
      <Element attributes={{ href: "myVideo.mp4" }} tagName="a">
        <a href="myVideo.mp4">
          link to the video
        </a>
      </Element>
       instead.
      

    </video>
  </Element>
</Markup>
`;

exports[`html wbr renders 1`] = `
<Markup content="Fernstraßen<wbr>bau<wbr>privat<wbr>finanzierungs<wbr>gesetz">
  Fernstraßen
  <Element selfClose tagName="wbr">
    <wbr />
  </Element>
  bau
  <Element selfClose tagName="wbr">
    <wbr />
  </Element>
  privat
  <Element selfClose tagName="wbr">
    <wbr />
  </Element>
  finanzierungs
  <Element selfClose tagName="wbr">
    <wbr />
  </Element>
  gesetz
</Markup>
`;
